--- a/animations/src/components/Modal/Modal.css
+++ b/animations/src/components/Modal/Modal.css
@@ -10,12 +10,47 @@
     top: 30%;
     left: 25%;
     width: 50%;
+    transition: all 0.3s ease-out;
 }
 
 .ModalOpen {
-    display: block;
+    animation: openModal 0.4s ease-out forwards;
+    visibility: visible;
 }
 
 .ModalClosed {
-    display: none;
+    animation: closeModal 0.4s ease-out forwards;
+    visibility: hidden;
+}
+
+@keyframes openModal {
+    0% {
+        z-index: inherit;
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(20%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes closeModal {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    50% {
+        opacity: 0.8;
+        transform: translateY(60%);
+    }
+    100% {
+        z-index: -1;
+        opacity: 0;
+        transform: translateY(-100%);
+    }
 }
