--- a/react_ts/src/index.css
+++ b/react_ts/src/index.css
@@ -27,6 +27,7 @@ body {
     margin: 0;
     display: flex;
     place-items: center;
+    align-items: normal;
     justify-content: center;
     min-width: 320px;
     min-height: 100vh;
